--- a/gehoortest.application-User.Interface/Assets/Styling/ButtonStyle.xaml
+++ b/gehoortest.application-User.Interface/Assets/Styling/ButtonStyle.xaml
@@ -1,21 +1,21 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="PrimaryButton" TargetType="{x:Type Button}">
-		<Setter Property="Height" Value="50"/>
+        <Setter Property="Height" Value="50"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Background" Value="{StaticResource BackGroundColor}"/>
-		<Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
-		<Setter Property="Template">
-			<Setter.Value>
-				<ControlTemplate TargetType="{x:Type Button}">
-					<Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="{StaticResource PrimaryColor}" CornerRadius="5">
-						<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
-					</Border>
-					<ControlTemplate.Triggers>
-						<Trigger Property="IsMouseOver" Value="True">
-							<Setter Property="Background" Value="{StaticResource PrimaryColor}" TargetName="Border" />
-							<Setter Property="Foreground" Value="{StaticResource BackGroundColor}" />
+        <Setter Property="Foreground" Value="{StaticResource PrimaryColor}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" BorderThickness="2" BorderBrush="{StaticResource PrimaryColor}" CornerRadius="5">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter Property="Background" Value="{StaticResource PrimaryColor}" TargetName="Border" />
+                            <Setter Property="Foreground" Value="{StaticResource BackGroundColor}" />
                         </Trigger>
                         <Trigger Property="IsEnabled" Value="False">
                             <Setter Property="Background" Value="LightGray"/>
@@ -23,12 +23,12 @@
                             <Setter Property="Foreground" Value="DarkSlateGray"/>
                         </Trigger>
                     </ControlTemplate.Triggers>
-				</ControlTemplate>
-			</Setter.Value>
-		</Setter>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
     <Style x:Key="SecondaryButton" TargetType="{x:Type Button}">
-        <Setter Property="Height" Value="50"/>
+        <Setter Property="Height" Value="60"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
@@ -69,6 +69,21 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
                     <Border x:Name="Border" Background="{TemplateBinding Background}" CornerRadius="30">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    <Style x:Key="PlayButton" TargetType="{x:Type Button}">
+        <Setter Property="Height" Value="100"/>
+        <Setter Property="Width" Value="100"/>
+        <Setter Property="Cursor" Value="Hand"/>
+        <Setter Property="Background" Value="{StaticResource PrimaryColor}"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border x:Name="Border" Background="{TemplateBinding Background}" CornerRadius="50">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
