--- a/UserInterface/Assets/Styling/Colors.xaml
+++ b/UserInterface/Assets/Styling/Colors.xaml
@@ -1,6 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <SolidColorBrush x:Key="PrimaryColor"  Color="#DA0063"></SolidColorBrush>
-    <SolidColorBrush x:Key="SecondaryColor"  Color="Yellow"></SolidColorBrush>
-    <SolidColorBrush x:Key="BackGroundColor"  Color="White"></SolidColorBrush>
+
+    <SolidColorBrush x:Key="PrimaryColor" Color="#000000"/>
+    <SolidColorBrush x:Key="SecondaryColor" Color="#DA0063"/>
+    <SolidColorBrush x:Key="SecondaryColor_Highlight" Color="#E374A6"/>
+    <SolidColorBrush x:Key="PrimaryBackgroundColor" Color="#FFFFFF"/>
+    <SolidColorBrush x:Key="SecondaryBackgroundColor" Color="#E6E6E6"/>
+    <Color x:Key="Shadow" A="255" R="220" G="220" B="220"/>
+    
 </ResourceDictionary>
